--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+_linux/*
+debugger.xml
+editor.xml
+github_settings.xml
+plugin_ui.xml
+vcs.xml
